production/sdp-web/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdp-web
  namespace: prod
spec:
  tls:
  - hosts:
    - sdp-web.sdpaks.equinor.com
    secretName: sdp-web-tls
  rules:
    - host: sdp.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sdp-web
              servicePort: 80
    - host: sdp-web.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sdp-web
              servicePort: 80
